struct TourViewModel {
    let title: String
    let address: String
    let inquiringNumber: String
    let imageURLString: String
}
